Changes to deal with zombie processes
Refractoring to the base test class, making all test cases parametrized
and avoiding differences between test cases
Also minor fixes related to smells that sonar and IntelliJ detect